--- a/docs/en/manifest.json
+++ b/docs/en/manifest.json
@@ -31,14 +31,14 @@
       }
     },
     {
-      "href": "EPUB/xhtml/htmloofrs/page1.xhtml",
+      "href": "https://fieldguides.github.io/library/en/content/copyright.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "EPUB/xhtml/htmloofrs/page2.xhtml",
+      "href": "https://fieldguides.github.io/library/en/content/frontpage.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
@@ -192,7 +192,7 @@
       }
     },
     {
-      "href": "EPUB/xhtml/raw/page.xhtml",
+      "href": "https://fieldguides.github.io/library/en/content/backcover.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
@@ -235,12 +235,12 @@
       "title": "Title"
     },
     {
-      "href": "EPUB/xhtml/htmloofrs/page1.xhtml",
+      "href": "https://fieldguides.github.io/library/en/content/copyright.xhtml",
       "title": "Inside Cover"
     },
     {
-      "href": "EPUB/xhtml/htmloofrs/page2.xhtml",
-      "title": "Front Page 1"
+      "href": "https://fieldguides.github.io/library/en/content/frontpage.xhtml",
+      "title": "Front Page"
     },
     {
       "href": "EPUB/xhtml/htmloofrs/page4.xhtml",
@@ -327,7 +327,7 @@
       "title": "20. Laboratory Equipment"
     },
     {
-      "href": "EPUB/xhtml/raw/page.xhtml",
+      "href": "https://fieldguides.github.io/library/en/content/backcover.xhtml",
       "title": "Back Cover"
     }
   ]
