--- a/docs/en/manifest.json
+++ b/docs/en/manifest.json
@@ -24,7 +24,7 @@
   },
   "readingOrder": [
     {
-      "href": "content/xhtml/raw/title.xhtml",
+      "href": "content/xhtml/title.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
@@ -45,147 +45,147 @@
       }
     },
     {
-      "href": "content/xhtml/raw/introduction.xhtml",
+      "href": "content/xhtml/introduction.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter1.xhtml",
+      "href": "content/xhtml/chapter1.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter2.xhtml",
+      "href": "content/xhtml/chapter2.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter3.xhtml",
+      "href": "content/xhtml/chapter3.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter4.xhtml",
+      "href": "content/xhtml/chapter4.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter5.xhtml",
+      "href": "content/xhtml/chapter5.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter6.xhtml",
+      "href": "content/xhtml/chapter6.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter7.xhtml",
+      "href": "content/xhtml/chapter7.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter8.xhtml",
+      "href": "content/xhtml/chapter8.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter9.xhtml",
+      "href": "content/xhtml/chapter9.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter10.xhtml",
+      "href": "content/xhtml/chapter10.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter11.xhtml",
+      "href": "content/xhtml/chapter11.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter12.xhtml",
+      "href": "content/xhtml/chapter12.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter13.xhtml",
+      "href": "content/xhtml/chapter13.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter14.xhtml",
+      "href": "content/xhtml/chapter14.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter15.xhtml",
+      "href": "content/xhtml/chapter15.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter16.xhtml",
+      "href": "content/xhtml/chapter16.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter17.xhtml",
+      "href": "content/xhtml/chapter17.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter18.xhtml",
+      "href": "content/xhtml/chapter18.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter19.xhtml",
+      "href": "content/xhtml/chapter19.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
       }
     },
     {
-      "href": "content/xhtml/raw/chapter20.xhtml",
+      "href": "content/xhtml/chapter20.xhtml",
       "type": "application/xhtml+xml",
       "properties": {
         "layout": "reflowable"
@@ -222,7 +222,7 @@
   ],
   "toc": [
     {
-      "href": "content/xhtml/raw/title.xhtml",
+      "href": "content/xhtml/title.xhtml",
       "title": "Title"
     },
     {
@@ -234,87 +234,87 @@
       "title": "Front Page"
     },
     {
-      "href": "content/xhtml/raw/introduction.xhtml",
+      "href": "content/xhtml/introduction.xhtml",
       "title": "Introduction"
     },
     {
-      "href": "content/xhtml/raw/chapter1.xhtml",
+      "href": "content/xhtml/chapter1.xhtml",
       "title": "1. Sources of Information"
     },
     {
-      "href": "content/xhtml/raw/chapter2.xhtml",
+      "href": "content/xhtml/chapter2.xhtml",
       "title": "2. Managing Informants"
     },
     {
-      "href": "content/xhtml/raw/chapter3.xhtml",
+      "href": "content/xhtml/chapter3.xhtml",
       "title": "3. Intelligence Reports"
     },
     {
-      "href": "content/xhtml/raw/chapter4.xhtml",
+      "href": "content/xhtml/chapter4.xhtml",
       "title": "4. Sharing Intelligence"
     },
     {
-      "href": "content/xhtml/raw/chapter5.xhtml",
+      "href": "content/xhtml/chapter5.xhtml",
       "title": "5. Decision Making"
     },
     {
-      "href": "content/xhtml/raw/chapter6.xhtml",
+      "href": "content/xhtml/chapter6.xhtml",
       "title": "6. Operational Orders"
     },
     {
-      "href": "content/xhtml/raw/chapter7.xhtml",
+      "href": "content/xhtml/chapter7.xhtml",
       "title": "7. Assessing Risks"
     },
     {
-      "href": "content/xhtml/raw/chapter8.xhtml",
+      "href": "content/xhtml/chapter8.xhtml",
       "title": "8. Surveillance"
     },
     {
-      "href": "content/xhtml/raw/chapter9.xhtml",
+      "href": "content/xhtml/chapter9.xhtml",
       "title": "9. Technical Investigations"
     },
     {
-      "href": "content/xhtml/raw/chapter10.xhtml",
+      "href": "content/xhtml/chapter10.xhtml",
       "title": "10. Controlled Deliveries"
     },
     {
-      "href": "content/xhtml/raw/chapter11.xhtml",
+      "href": "content/xhtml/chapter11.xhtml",
       "title": "11. Preserving a Crime Scene"
     },
     {
-      "href": "content/xhtml/raw/chapter12.xhtml",
+      "href": "content/xhtml/chapter12.xhtml",
       "title": "12. Searching a Crime Scene"
     },
     {
-      "href": "content/xhtml/raw/chapter13.xhtml",
+      "href": "content/xhtml/chapter13.xhtml",
       "title": "13. Forensic Considerations"
     },
     {
-      "href": "content/xhtml/raw/chapter14.xhtml",
+      "href": "content/xhtml/chapter14.xhtml",
       "title": "14. Evidence Preservation"
     },
     {
-      "href": "content/xhtml/raw/chapter15.xhtml",
+      "href": "content/xhtml/chapter15.xhtml",
       "title": "15. Follow the Money Trail"
     },
     {
-      "href": "content/xhtml/raw/chapter16.xhtml",
+      "href": "content/xhtml/chapter16.xhtml",
       "title": "16. Searching People"
     },
     {
-      "href": "content/xhtml/raw/chapter17.xhtml",
+      "href": "content/xhtml/chapter17.xhtml",
       "title": "17. Interviewing Suspects"
     },
     {
-      "href": "content/xhtml/raw/chapter18.xhtml",
+      "href": "content/xhtml/chapter18.xhtml",
       "title": "18. Drugs"
     },
     {
-      "href": "content/xhtml/raw/chapter19.xhtml",
+      "href": "content/xhtml/chapter19.xhtml",
       "title": "19. Precursor Chemicals"
     },
     {
-      "href": "content/xhtml/raw/chapter20.xhtml",
+      "href": "content/xhtml/chapter20.xhtml",
       "title": "20. Laboratory Equipment"
     },
     {
