add chapter 12 href

--- a/docs/en/manifest.json
+++ b/docs/en/manifest.json
@@ -282,6 +282,7 @@
       "title": "11. Preserving a Crime Scene"
     },
     {
+      "href": "content/xhtml/chapter12.xhtml",
       "title": "12. Searching a Crime Scene",
       "children": [
         {
