--- a/docs/en/manifest.json
+++ b/docs/en/manifest.json
@@ -4,7 +4,7 @@
   ],
   "metadata": {
     "@type": "http://schema.org/Book",
-    "title": "Drug & Precursor Trafficking: A field guide for frontline officers",
+    "title": "Drug & Precursor Trafficking:<br/>A field guide for frontline officers",
     "identifier": "urn:uuid:472cf403-4dd5-54a1-3c42-1f5a306ba931",
     "author": {
       "name": "N/A"
